--- a/working_notebook_regression_combined_3.ipynb
+++ b/working_notebook_regression_combined_3.ipynb
@@ -2753,14 +2753,7 @@
     "rf_gs = GridSearchCV(rf, rf_params, scoring=rmse_scorer, cv=5, verbose=2, n_jobs=-1)\n",
     "\n",
     "#now I need to fit that to my training\n",
-    "rf_gs.fit(X_train_fe, y_train)\n",
-    "\n",
-    "#This takes forever to run so I don't want to have to run it every time\n",
-    "# Save the model (e.g., a RandomForestRegressor)\n",
-    "joblib.dump(rf_gs, 'random_forest_gs.pkl')\n",
-    "\n",
-    "# # To load the model later\n",
-    "# rf_gs = joblib.load('random_forest_gs.pkl')"
+    "rf_gs.fit(X_train_fe, y_train)"
    ]
   },
   {
